Tablet (768px) responsive

--- a/pages/about.html
+++ b/pages/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="w th=device-width, initial-scale=1.0">
     <title>Sobre Nosotros</title>
     <link rel="shortcut icon" href="../img/Favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../styles/style.css">
@@ -54,15 +54,22 @@
                 <br> Cumplimos nuestros objetivos por medio de una sinergia de equipo que potencia la consulta y
                 participación hacia una disminución de peligros/riesgos en nuestros procesos; a su vez realizamos
                 prácticas que buscan la disminución de nuestro impacto ambiental.</p>
-            <h2 class="letraTitulo titulo3About">NUESTRA MISIÓN</h2>
-            <p class="parrafos texto3About textoProminente">Somos una empresa dedicada a la fabricación, comercialización y decoración de envases y
+            <div class="sobreMisionVision">
+                <div>
+                    <h2 class="letraTitulo titulo3About">NUESTRA MISIÓN</h2>
+                <p class="parrafos texto3About textoProminente">Somos una empresa dedicada a la fabricación, comercialización y decoración de envases y
                 empaques plásticos para diferentes industrias (farmacéutico, cosméticos, alimentos, entre otros) en
                 Colombia con más de 25 años de experiencia. <br> Atendemos los requerimientos de nuestros clientes por
                 medio de un servicio de mejoramiento continuo con altos estándares de calidad e innovación, que permiten
                 una estrecha relación para alcanzar la satisfacción del cliente.</p>
-            <h2 class="letraTitulo titulo4About">NUESTRA VISIÓN</h2>
-            <p class="parrafos texto4About textoProminente">Para el año 2025 seremos una empresa con sostenimiento económico y social por medio de
+                </div>
+                <div>
+                    <h2 class="letraTitulo titulo4About">NUESTRA VISIÓN</h2>
+                <p class="parrafos texto4About textoProminente">Para el año 2025 seremos una empresa con sostenimiento económico y social por medio de
                 procesos de innovación, sistematización y mejoramiento del recurso humano</p>
+                </div>
+            </div>
+                
             <h2 class="letraTitulo titulo5About">Mapa de procesos</h2>
             <img class="imagen5About" src="../img/mapa_procesos.webp" alt="Mapa de procesos">
         </section>
