--- a/pages/catalog.html
+++ b/pages/catalog.html
@@ -76,151 +76,151 @@
                 <span class="tarjeta">
                     <a href="../pages/product.html">
                         <img src="../img/catalogo/132.png" alt="Envase" class="tarjetaImagen">
-                        <h4 class="letraTitulo">Envase XXX</h4>
+                        <p class="letraTitulo">Envase XXX</p>
                     </a>
                 </span>
                 <span class="tarjeta">
                     <a href="../pages/product.html">
                         <img src="../img/catalogo/133.png" alt="Envase" class="tarjetaImagen">
-                        <h4 class="letraTitulo">Envase XXX</h4>
+                        <p class="letraTitulo">Envase XXX</p>
                     </a>
                 </span>
                 <span class="tarjeta">
                     <a href="../pages/product.html">
                         <img src="../img/catalogo/134.png" alt="Envase" class="tarjetaImagen">
-                        <h4 class="letraTitulo">Envase XXX</h4>
+                        <p class="letraTitulo">Envase XXX</p>
                     </a>
                 </span>
                 <span class="tarjeta">
                     <a href="../pages/product.html">
                         <img src="../img/catalogo/135.png" alt="Envase" class="tarjetaImagen">
-                        <h4 class="letraTitulo">Envase XXX</h4>
+                        <p class="letraTitulo">Envase XXX</p>
                     </a>
                 </span>
                 <span class="tarjeta">
                     <a href="../pages/product.html">
                         <img src="../img/catalogo/136.png" alt="Envase" class="tarjetaImagen">
-                        <h4 class="letraTitulo">Envase XXX</h4>
+                        <p class="letraTitulo">Envase XXX</p>
                     </a>
                 </span>
                 <span class="tarjeta">
                     <a href="../pages/product.html">
                         <img src="../img/catalogo/137.png" alt="Envase" class="tarjetaImagen">
-                        <h4 class="letraTitulo">Envase XXX</h4>
+                        <p class="letraTitulo">Envase XXX</p>
                     </a>
                 </span>
                 <span class="tarjeta">
                     <a href="../pages/product.html">
                         <img src="../img/catalogo/138.png" alt="Envase" class="tarjetaImagen">
-                        <h4 class="letraTitulo">Envase XXX</h4>
+                        <p class="letraTitulo">Envase XXX</p>
                     </a>
                 </span>
                 <span class="tarjeta">
                     <a href="../pages/product.html">
                         <img src="../img/catalogo/139.png" alt="Envase" class="tarjetaImagen">
-                        <h4 class="letraTitulo">Envase XXX</h4>
+                        <p class="letraTitulo">Envase XXX</p>
                     </a>
                 </span>
                 <span class="tarjeta">
                     <a href="../pages/product.html">
                         <img src="../img/catalogo/140.png" alt="Envase" class="tarjetaImagen">
-                        <h4 class="letraTitulo">Envase XXX</h4>
+                        <p class="letraTitulo">Envase XXX</p>
                     </a>
                 </span>
                 <span class="tarjeta">
                     <a href="../pages/product.html">
                         <img src="../img/catalogo/141.png" alt="Envase" class="tarjetaImagen">
-                        <h4 class="letraTitulo">Envase XXX</h4>
+                        <p class="letraTitulo">Envase XXX</p>
                     </a>
                 </span>
                 <span class="tarjeta">
                     <a href="../pages/product.html">
                         <img src="../img/catalogo/132.png" alt="Envase" class="tarjetaImagen">
-                        <h4 class="letraTitulo">Envase XXX</h4>
+                        <p class="letraTitulo">Envase XXX</p>
                     </a>
                 </span>
                 <span class="tarjeta">
                     <a href="../pages/product.html">
                         <img src="../img/catalogo/142.png" alt="Envase" class="tarjetaImagen">
-                        <h4 class="letraTitulo">Envase XXX</h4>
+                        <p class="letraTitulo">Envase XXX</p>
                     </a>
                 </span>
                 <span class="tarjeta">
                     <a href="../pages/product.html">
                         <img src="../img/catalogo/143.png" alt="Envase" class="tarjetaImagen">
-                        <h4 class="letraTitulo">Envase XXX</h4>
+                        <p class="letraTitulo">Envase XXX</p>
                     </a>
                 </span>
                 <span class="tarjeta">
                     <a href="../pages/product.html">
                         <img src="../img/catalogo/144.png" alt="Envase" class="tarjetaImagen">
-                        <h4 class="letraTitulo">Envase XXX</h4>
+                        <p class="letraTitulo">Envase XXX</p>
                     </a>
                 </span>
                 <span class="tarjeta">
                     <a href="../pages/product.html">
                         <img src="../img/catalogo/145.png" alt="Envase" class="tarjetaImagen">
-                        <h4 class="letraTitulo">Envase XXX</h4>
+                        <p class="letraTitulo">Envase XXX</p>
                     </a>
                 </span>
                 <span class="tarjeta">
                     <a href="../pages/product.html">
                         <img src="../img/catalogo/146.png" alt="Envase" class="tarjetaImagen">
-                        <h4 class="letraTitulo">Envase XXX</h4>
+                        <p class="letraTitulo">Envase XXX</p>
                     </a>
                 </span>
                 <span class="tarjeta">
                     <a href="../pages/product.html">
                         <img src="../img/catalogo/147.png" alt="Envase" class="tarjetaImagen">
-                        <h4 class="letraTitulo">Envase XXX</h4>
+                        <p class="letraTitulo">Envase XXX</p>
                     </a>
                 </span>
                 <span class="tarjeta">
                     <a href="../pages/product.html">
                         <img src="../img/catalogo/148.png" alt="Envase" class="tarjetaImagen">
-                        <h4 class="letraTitulo">Envase XXX</h4>
+                        <p class="letraTitulo">Envase XXX</p>
                     </a>
                 </span>
                 <span class="tarjeta">
                     <a href="../pages/product.html">
                         <img src="../img/catalogo/149.png" alt="Envase" class="tarjetaImagen">
-                        <h4 class="letraTitulo">Envase XXX</h4>
+                        <p class="letraTitulo">Envase XXX</p>
                     </a>
                 </span>
                 <span class="tarjeta">
                     <a href="../pages/product.html">
                         <img src="../img/catalogo/150.png" alt="Envase" class="tarjetaImagen">
-                        <h4 class="letraTitulo">Envase XXX</h4>
+                        <p class="letraTitulo">Envase XXX</p>
                     </a>
                 </span>
                 <span class="tarjeta">
                     <a href="../pages/product.html">
                         <img src="../img/catalogo/151.png" alt="Envase" class="tarjetaImagen">
-                        <h4 class="letraTitulo">Envase XXX</h4>
+                        <p class="letraTitulo">Envase XXX</p>
                     </a>
                 </span>
                 <span class="tarjeta">
                     <a href="../pages/product.html">
                         <img src="../img/catalogo/152.png" alt="Envase" class="tarjetaImagen">
-                        <h4 class="letraTitulo">Envase XXX</h4>
+                        <p class="letraTitulo">Envase XXX</p>
                     </a>
                 </span>
                 <span class="tarjeta">
                     <a href="../pages/product.html">
                         <img src="../img/catalogo/153.png" alt="Envase" class="tarjetaImagen">
-                        <h4 class="letraTitulo">Envase XXX</h4>
+                        <p class="letraTitulo">Envase XXX</p>
                     </a>
                 </span>
                 <span class="tarjeta">
                     <a href="../pages/product.html">
                         <img src="../img/catalogo/154.png" alt="Envase" class="tarjetaImagen">
-                        <h4 class="letraTitulo">Envase XXX</h4>
+                        <p class="letraTitulo">Envase XXX</p>
                     </a>
                 </span>
                 <span class="tarjeta">
                     <a href="../pages/product.html">
                         <img src="../img/catalogo/155.png" alt="Envase" class="tarjetaImagen">
-                        <h4 class="letraTitulo">Envase XXX</h4>
+                        <p class="letraTitulo">Envase XXX</p>
                     </a>
                 </span>
 
