--- a/pages/about.html
+++ b/pages/about.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="w th=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre Nosotros</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="shortcut icon" href="../img/Favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../styles/style.css">
 
@@ -13,22 +14,39 @@
 
 <body>
     <header>
-        <nav class="navbar">
-            <ul class="navbar__menu">
-                <li><a class="menuInactivo" href="../index.html">Inicio</a></li>
-                <li><a class="menuActivo" href="./about.html">Sobre nosotros</a></li>
-                <li><a class="menuInactivo" href="./catalog.html">Catálogo</a></li>
-                <li><a class="menuInactivo" href="./contact.html">Contacto</a></li>
-            </ul>
-
-            <a href="../index.html"><img class="imgFavicon" src="../img/Favicon.png" alt="Favicon"></a>
-
-            <div class="menu_secundario">
-                <input class="input" type="text" placeholder="Buscar">
-
-                <a href="#"><img class="imgCarrito" src="../img/carrito.png" alt="carrito"></a>
+        <nav class="navbar navbar-expand-lg rounded-4 mx-5 mt-3 p-0">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="../index.html"><img class="imgFavicon" src="../img/Favicon.png" alt="Favicon"></a>
+              <button class="navbar-toggler me-4" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="menuInactivo nav-link" href="../index.html">Inicio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="menuActivo nav-link" href="./about.html">Sobre nosotros</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="menuInactivo nav-link" href="./catalog.html">Catálogo</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="menuInactivo nav-link" href="./contact.html">Contacto</a>
+                  </li>
+                </ul>
+                <div class="d-flex align-items-center justify-content-md-center gap-3 pe-4">
+                  <form class="d-flex align-items-center" role="search">
+                    <input class="form-control me-2 rounded-4 border-0 shadow-sm bg-transparent fs-6 fw-lighter" type="search" placeholder="Buscar" aria-label="Search">
+                    <button class="btn btn-outline-success fs-6 my-3 py-1 px-3 me-4 rounded-5 border-0 shadow-sm" type="submit">Buscar</button>
+                  </form>
+                  <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#36c000" class="bi bi-cart-fill" viewBox="0 0 20 20">
+                    <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+                  </svg></a>
+                </div>
+              </div>
             </div>
-        </nav>
+          </nav>      
     </header>
     <main>
         <section class="sobreTexto">
@@ -93,6 +111,7 @@
             <p class="derechosTexto">LMVW 2023</p>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 
 </html>
