--- a/pages/product.html
+++ b/pages/product.html
@@ -10,7 +10,6 @@
     <meta name="keywords" content="Optiformas, Envases, Medellin, Plastico, Tarros, Botella, Productos, Materiales, Cuellos">
     <meta name="description" content="Mira el producto que necesitas para cumplir todos tus requerimientos">
 
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="shortcut icon" href="../img/Favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../styles/sass/estilos.css">
@@ -73,7 +72,7 @@
                 </ul>
             </div>
             <div class="productoSeccion__imagen">
-                <img class="imagenProducto" src="../img/catalogo/146.png" alt="">
+                <img class="imagenProducto" src="../img/catalogo/146.png" alt="Producto seleccionado">
             </div>
             <div class="productoSeccion__caracteristicas">
                 <label>Color
@@ -118,14 +117,11 @@
             <p class="indicadorFooter">D.</p>
                 <p>Carrera 64 # 35-35 <br> Itagüí - Antioquia, Colombia </p>
         </div>
-
         <img class="imgFavicon" src="../img/Favicon.png" alt="Favicon">
-
         <div class="derechos">
             <img class="imgFavicon_LM" src="../img/Logo_LM.png" alt="Logo LM">
             <p class="derechosTexto">LMVW 2023</p>
         </div>
-
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
