hero images resizing

--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
                     <h1 class="letraTitulo">Productos plásticos de la más alta calidad</h1>
                     <h3 class="parrafo">30 años de experiencia para acompañarlo en sus proyectos</h3>
                 </div>
-                <img class="imgBot imginicio1 roll-in-left" src="./img/Bot_banner_1.png" alt="botella">
-                <img class="imgBot imginicio2 roll-in-right" src="./img/Bot_banner_2.png" alt="botella">
-                <img class="imgBot imginicio3" src="./img/Bot_banner_3.png" alt="botella">
-                <img class="imgBot imginicio4" src="./img/Bot_banner_2.png" alt="botella">
-                <img class="imgBot imginicio5" src="./img/Bot_banner_3.png" alt="botella">
+                <img class="imgBot imginicio1 roll-in-left" src="./img/Bot_banner_1_1.png" alt="botella">
+                <img class="imgBot imginicio2 roll-in-right" src="./img/Bot_banner_2_2.png" alt="botella">
+                <img class="imgBot imginicio3" src="./img/Bot_banner_3_3.png" alt="botella">
+                <img class="imgBot imginicio4" src="./img/Bot_banner_2_2.png" alt="botella">
+                <img class="imgBot imginicio5" src="./img/Bot_banner_3_3.png" alt="botella">
             </div>
             <div class="inicioImagen">
                 <iframe class="imgPpal" src="https://www.youtube.com/embed/3DW9JgsT6KA?controls=0?&autoplay=1&mute=1&controls=0&loop=1" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"></iframe>
