--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +10,7 @@
     <meta name="description" content="Optiformas es una empresa con más de 30 años fabricando productos plásticos de la más alta calidad">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="shortcut icon" href="./img/Favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/Favicon.webp" type="image/x-icon">
     <link rel="stylesheet" href="./styles/sass/estilos.css">
 </head>
 
@@ -20,7 +19,7 @@
     <header>
         <nav class="navbar navbar-expand-lg rounded-4 mx-5 mt-3 p-0">
             <div class="container-fluid">
-              <a class="navbar-brand" href="./index.html"><img class="imgFavicon" src="./img/Favicon.png" alt="Favicon"></a>
+              <a class="navbar-brand" href="./index.html"><img class="imgFavicon" src="./img/Favicon.webp" alt="Favicon"></a>
               <button class="navbar-toggler me-4" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -50,20 +49,20 @@
                 </div>
               </div>
             </div>
-          </nav> 
+        </nav> 
     </header>
     <main>
         <section class="landing">
-            <div class="inicio">
+            <div class="inicio my-5">
                 <div class="textoInicio" >
                     <h1 class="letraTitulo">Productos plásticos de la más alta calidad</h1>
                     <h3 class="parrafo">30 años de experiencia para acompañarlo en sus proyectos</h3>
                 </div>
-                <img class="imgBot imginicio1 roll-in-left" src="./img/Bot_banner_1_1.png" alt="botella">
-                <img class="imgBot imginicio2 roll-in-right" src="./img/Bot_banner_2_2.png" alt="botella">
-                <img class="imgBot imginicio3" src="./img/Bot_banner_3_3.png" alt="botella">
-                <img class="imgBot imginicio4" src="./img/Bot_banner_2_2.png" alt="botella">
-                <img class="imgBot imginicio5" src="./img/Bot_banner_3_3.png" alt="botella">
+                <img class="imgBot imginicio1 roll-in-left" src="./img/Bot_banner_1_1.webp" alt="botella">
+                <img class="imgBot imginicio2 roll-in-right" src="./img/Bot_banner_2_2.webp" alt="botella">
+                <img class="imgBot imginicio3" src="./img/Bot_banner_3_3.webp" alt="botella">
+                <img class="imgBot imginicio4" src="./img/Bot_banner_2_2.webp" alt="botella">
+                <img class="imgBot imginicio5" src="./img/Bot_banner_3_3.webp" alt="botella">
             </div>
             <div class="inicioImagen">
                 <iframe class="imgPpal" src="https://www.youtube.com/embed/3DW9JgsT6KA?controls=0?&autoplay=1&mute=1&controls=0&loop=1" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"></iframe>
@@ -77,19 +76,19 @@
             <div class="row row-cols-1 row-cols-md-4 row-cols-sm-2 g-5 m-5 d-flex text-center">
                 <div class="col">
                   <div class="card h-100 rounded-4 tarjeta">
-                    <img src="./img/catalogo/132.png" alt="Envase" class="card-img-top img-fluid tarjetaImagen pt-3">
+                    <img src="./img/catalogo/132.webp" alt="Envase" class="card-img-top img-fluid tarjetaImagen pt-3">
                     <div class="card-body">
                       <h5 class="card-title">Envase XXX</h5>
                       <p class="card-text">Envase redondo en PEAD</p>
                     </div>
                     <div class=" mb-5">
-                        <a class="btn rounded-3 px-3 btnProducto text-white" href="./pages/product.html" >Ver producto</a>
+                      <a class="btn rounded-3 px-3 btnProducto text-white" href="./pages/product.html" >Ver producto</a>
                     </div> 
                   </div>
                 </div>
                 <div class="col">
                   <div class="card h-100 rounded-4 tarjeta">
-                    <img src="./img/catalogo/133.png" alt="Envase" class="card-img-top img-fluid tarjetaImagen pt-3">
+                    <img src="./img/catalogo/133.webp" alt="Envase" class="card-img-top img-fluid tarjetaImagen pt-3">
                     <div class="card-body">
                       <h5 class="card-title">Envase XXX</h5>
                       <p class="card-text">Envase redondo en PP</p>
@@ -101,7 +100,7 @@
                 </div>
                 <div class="col">
                   <div class="card h-100 rounded-4 tarjeta">
-                    <img src="./img/catalogo/134.png" alt="Envase" class="card-img-top img-fluid tarjetaImagen pt-3">
+                    <img src="./img/catalogo/134.webp" alt="Envase" class="card-img-top img-fluid tarjetaImagen pt-3">
                     <div class="card-body">
                       <h5 class="card-title">Envase XXX</h5>
                       <p class="card-text">Envase redondo en PVC</p>
@@ -113,7 +112,7 @@
                 </div>
                 <div class="col">
                   <div class="card h-100 rounded-4 tarjeta">
-                    <img src="./img/catalogo/135.png" alt="Envase" class="card-img-top img-fluid tarjetaImagen pt-3">
+                    <img src="./img/catalogo/135.webp" alt="Envase" class="card-img-top img-fluid tarjetaImagen pt-3">
                     <div class="card-body">
                       <h5 class="card-title">Envase XXX</h5>
                       <p class="card-text">Envase redondo en PEAD</p>
@@ -153,9 +152,9 @@
             <p class="indicadorFooter indicador4">D.</p>
                 <p class="textoIndicador4">Carrera 64 # 35-35 <br> Itagüí - Antioquia, Colombia </p>
         </div>
-        <img class="imgFavicon" src="./img/Favicon.png" alt="Favicon">
+        <img class="imgFavicon" src="./img/Favicon.webp" alt="Favicon">
         <div class="derechos">
-            <img class="imgFavicon_LM" src="./img/Logo_LM.png" alt="Logo LM">
+            <img class="imgFavicon_LM" src="./img/Logo_LM.webp" alt="Logo LM">
             <p class="derechosTexto">LMVW 2023</p>
         </div>
     </footer>
