--- a/pages/about.html
+++ b/pages/about.html
@@ -11,14 +11,14 @@
     <meta name="description" content="Conoce nuestra historia y lo que queremos lograr">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="shortcut icon" href="../img/Favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/Favicon.webp" type="image/x-icon">
     <link rel="stylesheet" href="../styles/sass/estilos.css">
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg rounded-4 mx-5 mt-3 p-0">
             <div class="container-fluid">
-              <a class="navbar-brand" href="../index.html"><img class="imgFavicon" src="../img/Favicon.png" alt="Favicon"></a>
+              <a class="navbar-brand" href="../index.html"><img class="imgFavicon" src="../img/Favicon.webp" alt="Favicon"></a>
               <button class="navbar-toggler me-4" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -92,9 +92,9 @@
             <p class="indicadorFooter">D.</p>
             <p>Carrera 64 # 35-35 <br> Itagüí - Antioquia, Colombia </p>
         </div>
-        <img class="imgFavicon" src="../img/Favicon.png" alt="Favicon">
+        <img class="imgFavicon" src="../img/Favicon.webp" alt="Favicon">
         <div class="derechos">
-            <img class="imgFavicon_LM" src="../img/Logo_LM.png" alt="Logo LM">
+            <img class="imgFavicon_LM" src="../img/Logo_LM.webp" alt="Logo LM">
             <p class="derechosTexto">LMVW 2023</p>
         </div>
     </footer>
