boucle @ navbar & catalog

--- a/pages/about.html
+++ b/pages/about.html
@@ -24,16 +24,16 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
+                  <li class="nav-item text-focus-in">
                     <a class="menuInactivo nav-link" href="../index.html">Inicio</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item text-focus-in">
                     <a class="menuActivo nav-link" href="./about.html">Sobre nosotros</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item text-focus-in">
                     <a class="menuInactivo nav-link" href="./catalog.html">Catálogo</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item text-focus-in">
                     <a class="menuInactivo nav-link" href="./contact.html">Contacto</a>
                   </li>
                 </ul>
@@ -51,7 +51,7 @@
           </nav>      
     </header>
     <main>
-        <section class="sobreTexto">
+        <section class="sobreTexto fade-in">
             <h2 class="letraTitulo titulo1About">Nuestra historia</h2>
             <img class="imgEmpresa" src="../img/foto_empresa.jpeg" alt="Empresa">
             <div class="parrafos texto1About textoNuestraHistoria">
