--- a/pages/catalog.html
+++ b/pages/catalog.html
@@ -28,16 +28,16 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="menuInactivo nav-link" href="../index.html">Inicio</a>
+                  <li class="nav-item text-focus-in">
+                    <a class="menuInactivo nav-link " href="../index.html">Inicio</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item text-focus-in">
                     <a class="menuInactivo nav-link" href="./about.html">Sobre nosotros</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item text-focus-in">
                     <a class="menuActivo nav-link" href="./catalog.html">Catálogo</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item text-focus-in">
                     <a class="menuInactivo nav-link" href="./contact.html">Contacto</a>
                   </li>
                 </ul>
@@ -117,7 +117,7 @@
                 </div>
 <!-- Catalogo -->
             <div class="catalogoTarjetas">
-                <div class="card border-0 rounded-3 m-2 tarjetaCatalogo">
+                <div class="card border-0 rounded-3 m-2 tarjetaCatalogo fade-in">
                     <a class="d-flex flex-column align-items-center justify-content-center" href="./product.html">
                         <img src="../img/catalogo/132.webp" alt="Envase" class="card-img-top img-fluid tarjetaImagen">
                         <div class="card-body">
@@ -125,7 +125,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="card border-0 rounded-3 m-2 tarjeta">
+                <div class="card border-0 rounded-3 m-2 tarjeta fade-in">
                     <a class="d-flex flex-column align-items-center justify-content-center" href="./product.html">
                         <img src="../img/catalogo/133.webp" alt="Envase" class="card-img-top img-fluid tarjetaImagen">
                         <div class="card-body">
@@ -133,7 +133,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="card border-0 rounded-3 m-2 tarjeta">
+                <div class="card border-0 rounded-3 m-2 tarjeta fade-in">
                     <a class="d-flex flex-column align-items-center justify-content-center" href="./product.html">
                         <img src="../img/catalogo/134.webp" alt="Envase" class="card-img-top img-fluid tarjetaImagen">
                         <div class="card-body">
@@ -141,7 +141,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="card border-0 rounded-3 m-2 tarjeta">
+                <div class="card border-0 rounded-3 m-2 tarjeta fade-in">
                     <a class="d-flex flex-column align-items-center justify-content-center" href="./product.html">
                         <img src="../img/catalogo/135.webp" alt="Envase" class="card-img-top img-fluid tarjetaImagen">
                         <div class="card-body">
@@ -149,7 +149,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="card border-0 rounded-3 m-2 tarjeta">
+                <div class="card border-0 rounded-3 m-2 tarjeta fade-in">
                     <a class="d-flex flex-column align-items-center justify-content-center" href="./product.html">
                         <img src="../img/catalogo/136.webp" alt="Envase" class="card-img-top img-fluid tarjetaImagen">
                         <div class="card-body">
@@ -157,7 +157,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="card border-0 rounded-3 m-2 tarjeta">
+                <div class="card border-0 rounded-3 m-2 tarjeta fade-in">
                     <a class="d-flex flex-column align-items-center justify-content-center" href="./product.html">
                         <img src="../img/catalogo/137.webp" alt="Envase" class="card-img-top img-fluid tarjetaImagen">
                         <div class="card-body">
@@ -165,7 +165,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="card border-0 rounded-3 m-2 tarjeta">
+                <div class="card border-0 rounded-3 m-2 tarjeta fade-in">
                     <a class="d-flex flex-column align-items-center justify-content-center" href="./product.html">
                         <img src="../img/catalogo/138.webp" alt="Envase" class="card-img-top img-fluid tarjetaImagen">
                         <div class="card-body">
@@ -173,7 +173,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="card border-0 rounded-3 m-2 tarjeta">
+                <div class="card border-0 rounded-3 m-2 tarjeta fade-in">
                     <a class="d-flex flex-column align-items-center justify-content-center" href="./product.html">
                         <img src="../img/catalogo/139.webp" alt="Envase" class="card-img-top img-fluid tarjetaImagen">
                         <div class="card-body">
@@ -181,7 +181,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="card border-0 rounded-3 m-2 tarjeta">
+                <div class="card border-0 rounded-3 m-2 tarjeta fade-in">
                     <a class="d-flex flex-column align-items-center justify-content-center" href="./product.html">
                         <img src="../img/catalogo/140.webp" alt="Envase" class="card-img-top img-fluid tarjetaImagen">
                         <div class="card-body">
@@ -189,7 +189,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="card border-0 rounded-3 m-2 tarjeta">
+                <div class="card border-0 rounded-3 m-2 tarjeta fade-in">
                     <a class="d-flex flex-column align-items-center justify-content-center" href="./product.html">
                         <img src="../img/catalogo/141.webp" alt="Envase" class="card-img-top img-fluid tarjetaImagen">
                         <div class="card-body">
@@ -197,7 +197,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="card border-0 rounded-3 m-2 tarjeta">
+                <div class="card border-0 rounded-3 m-2 tarjeta fade-in">
                     <a class="d-flex flex-column align-items-center justify-content-center" href="./product.html">
                         <img src="../img/catalogo/142.webp" alt="Envase" class="card-img-top img-fluid tarjetaImagen">
                         <div class="card-body">
@@ -205,7 +205,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="card border-0 rounded-3 m-2 tarjeta">
+                <div class="card border-0 rounded-3 m-2 tarjeta fade-in">
                     <a class="d-flex flex-column align-items-center justify-content-center" href="./product.html">
                         <img src="../img/catalogo/143.webp" alt="Envase" class="card-img-top img-fluid tarjetaImagen">
                         <div class="card-body">
@@ -213,7 +213,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="card border-0 rounded-3 m-2 tarjeta">
+                <div class="card border-0 rounded-3 m-2 tarjeta fade-in">
                     <a class="d-flex flex-column align-items-center justify-content-center" href="./product.html">
                         <img src="../img/catalogo/144.webp" alt="Envase" class="card-img-top img-fluid tarjetaImagen">
                         <div class="card-body">
@@ -221,7 +221,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="card border-0 rounded-3 m-2 tarjeta">
+                <div class="card border-0 rounded-3 m-2 tarjeta fade-in">
                     <a class="d-flex flex-column align-items-center justify-content-center" href="./product.html">
                         <img src="../img/catalogo/145.webp" alt="Envase" class="card-img-top img-fluid tarjetaImagen">
                         <div class="card-body">
@@ -229,7 +229,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="card border-0 rounded-3 m-2 tarjeta">
+                <div class="card border-0 rounded-3 m-2 tarjeta fade-in">
                     <a class="d-flex flex-column align-items-center justify-content-center" href="./product.html">
                         <img src="../img/catalogo/146.webp" alt="Envase" class="card-img-top img-fluid tarjetaImagen">
                         <div class="card-body">
@@ -237,7 +237,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="card border-0 rounded-3 m-2 tarjeta">
+                <div class="card border-0 rounded-3 m-2 tarjeta fade-in">
                     <a class="d-flex flex-column align-items-center justify-content-center" href="./product.html">
                         <img src="../img/catalogo/147.webp" alt="Envase" class="card-img-top img-fluid tarjetaImagen">
                         <div class="card-body">
@@ -245,7 +245,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="card border-0 rounded-3 m-2 tarjeta">
+                <div class="card border-0 rounded-3 m-2 tarjeta fade-in">
                     <a class="d-flex flex-column align-items-center justify-content-center" href="./product.html">
                         <img src="../img/catalogo/148.webp" alt="Envase" class="card-img-top img-fluid tarjetaImagen">
                         <div class="card-body">
@@ -253,7 +253,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="card border-0 rounded-3 m-2 tarjeta">
+                <div class="card border-0 rounded-3 m-2 tarjeta fade-in">
                     <a class="d-flex flex-column align-items-center justify-content-center" href="./product.html">
                         <img src="../img/catalogo/149.webp" alt="Envase" class="card-img-top img-fluid tarjetaImagen">
                         <div class="card-body">
@@ -261,7 +261,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="card border-0 rounded-3 m-2 tarjeta">
+                <div class="card border-0 rounded-3 m-2 tarjeta fade-in">
                     <a class="d-flex flex-column align-items-center justify-content-center" href="./product.html">
                         <img src="../img/catalogo/150.webp" alt="Envase" class="card-img-top img-fluid tarjetaImagen">
                         <div class="card-body">
@@ -269,7 +269,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="card border-0 rounded-3 m-2 tarjeta">
+                <div class="card border-0 rounded-3 m-2 tarjeta fade-in">
                     <a class="d-flex flex-column align-items-center justify-content-center" href="./product.html">
                         <img src="../img/catalogo/151.webp" alt="Envase" class="card-img-top img-fluid tarjetaImagen">
                         <div class="card-body">
@@ -277,7 +277,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="card border-0 rounded-3 m-2 tarjeta">
+                <div class="card border-0 rounded-3 m-2 tarjeta fade-in">
                     <a class="d-flex flex-column align-items-center justify-content-center" href="./product.html">
                         <img src="../img/catalogo/152.webp" alt="Envase" class="card-img-top img-fluid tarjetaImagen">
                         <div class="card-body">
@@ -285,7 +285,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="card border-0 rounded-3 m-2 tarjeta">
+                <div class="card border-0 rounded-3 m-2 tarjeta fade-in">
                     <a class="d-flex flex-column align-items-center justify-content-center" href="./product.html">
                         <img src="../img/catalogo/153.webp" alt="Envase" class="card-img-top img-fluid tarjetaImagen">
                         <div class="card-body">
@@ -293,7 +293,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="card border-0 rounded-3 m-2 tarjeta">
+                <div class="card border-0 rounded-3 m-2 tarjeta fade-in">
                     <a class="d-flex flex-column align-items-center justify-content-center" href="./product.html">
                         <img src="../img/catalogo/154.webp" alt="Envase" class="card-img-top img-fluid tarjetaImagen">
                         <div class="card-body">
@@ -301,7 +301,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="card border-0 rounded-3 m-2 tarjeta">
+                <div class="card border-0 rounded-3 m-2 tarjeta fade-in">
                     <a class="d-flex flex-column align-items-center justify-content-center" href="./product.html">
                         <img src="../img/catalogo/155.webp" alt="Envase" class="card-img-top img-fluid tarjetaImagen">
                         <div class="card-body">
