--- a/pages/product.html
+++ b/pages/product.html
@@ -26,16 +26,16 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
+                  <li class="nav-item text-focus-in">
                     <a class="menuInactivo nav-link" href="../index.html">Inicio</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item text-focus-in">
                     <a class="menuInactivo nav-link" href="./about.html">Sobre nosotros</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item text-focus-in">
                     <a class="menuActivo nav-link" href="./catalog.html">Catálogo</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item text-focus-in">
                     <a class="menuInactivo nav-link" href="./contact.html">Contacto</a>
                   </li>
                 </ul>
