--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
+                  <li class="nav-item text-focus-in">
                     <a class="menuActivo nav-link" href="./index.html">Inicio</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item text-focus-in">
                     <a class="menuInactivo nav-link" href="./pages/about.html">Sobre nosotros</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item text-focus-in">
                     <a class="menuInactivo nav-link" href="./pages/catalog.html">Catálogo</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item text-focus-in">
                     <a class="menuInactivo nav-link" href="./pages/contact.html">Contacto</a>
                   </li>
                 </ul>
@@ -65,7 +65,7 @@
                 <img class="imgBot imginicio5" src="./img/Bot_banner_3_3.webp" alt="botella">
             </div>
             <div class="inicioImagen">
-                <iframe class="imgPpal" src="https://www.youtube.com/embed/3DW9JgsT6KA?controls=0?&autoplay=1&mute=1&controls=0&loop=1" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"></iframe>
+                <div style="width:100%;height:0;padding-bottom:56%;position:relative;"><iframe src="https://giphy.com/embed/S7tbGnte9k8gq6vvdx" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
             </div>
         </section>
 <!-- Sección tarjetas -->
